# ai-agent-rekkieedu

./: .dockerignore  .env.example  .gitignore  AgentEdu.spec  Dockerfile  Dockerfile.prod  README.md  _tmp_test_vii.xlsx  build_windows.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  ketqua.json  launch_gui.py  pyproject.toml  requirements.txt  test_tiers.txt
.github/workflows/: cd-deploy.yml  ci.yml
cham_bai/: __init__.py  __main__.py  _embedded_key.py  assignment.py  btvn_comment.py  cli.py  code_format.py  collector.py  docx_reader.py  gdocs_reader.py  git_remote.py  github_template.py  google_sheets.py  grader.py  group_activity.py  gui.py  hackathon_ai.py  hackathon_exam.py  lark_bitable.py  model_options.py  onedrive_reader.py  openrouter.py  quiz_cli.py  quiz_excel.py  quiz_gen.py  reading_gen.py  rikkei_homework.py  schemas.py  session_end_plan.py  session_warmup_plan.py  settings.py  video_transcript.py  web_app.py  workflow.py
cham_bai/templates/: quiz_mau.xlsx
cham_bai/web/static/: app.js  index.html  style.css
docs/: troubleshooting-production.md
example/: Quizz_Session_Dau_Gio_Example.xlsx  quizz-lession-example.xlsx
nginx/: nginx.conf
nginx/conf.d/: agent-edu-rikkei.rugal.vn.conf
output/: Quizz_Session02_Cuoi_Gio_da_sua.xlsx
scripts/: build_corrected_session_end_quiz.py  build_corrected_session_warmup_quiz.py  build_session02_end_quiz.py  build_session02_warmup_quiz.py  embed_key_from_env.py  intro_lesson_end_bank.py  session02_end_bank.py
